A lot due to the move to a Minecraft env

--- a/thanks.txt
+++ b/thanks.txt
@@ -1,3 +1,3 @@
 This file is for thanking people who have aided development by either pull requests or simply helping regularly
 
-Ocawesome101 (pull request)
+Ocawesome101 - pull request, basically being the main person who helped me make it via teaching. Thank you, man.
